--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3,10 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Properties:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="property in properties">
-        <li><a href="#" tooltip="{{property.info}}">{{property.name}}</a></li>
-      </ul>
+    <h5>Integrate booking button into your website</h5>
     </div>
   </div>
 </div>
