styling for new color scheme

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,10 +1,10 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<header ng-include="'components/partials/navbar.html'" class="topnavbar-wrapper" ng-controller="NavbarController"></header>
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-lg-12">
-    <h5>Integrate booking button into your website</h5>
-    </div>
+      This is a tester..
   </div>
 </div>
+
+
 
