--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
-  <body ng-app="bookingAuthApp">
+  <body ng-app="bookingAuthApp" class="wrapper">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -69,11 +69,14 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/property/property.controller.js"></script>
+          <script src="app/property/property.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
-          <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/partials/navbar.controller.js"></script>
+          <script src="components/partials/sidebar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
