inventory and reservations template

--- a/client/index.html
+++ b/client/index.html
@@ -67,10 +67,14 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/inventory/inventory.controller.js"></script>
+          <script src="app/inventory/inventory.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/property/property.controller.js"></script>
           <script src="app/property/property.js"></script>
+          <script src="app/reservations/reservations.controller.js"></script>
+          <script src="app/reservations/reservations.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
