--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,4 +1,4 @@
-<header ng-include="'components/partials/navbar.html'" class="topnavbar-wrapper" ng-controller="NavbarController"></header>
+<header ng-include="'components/partials/navbar.html'" class="navbar-wrapper" ng-controller="NavbarController"></header>
 
 <div class="container-fluid">
   <div class="row">
