--- a/client/app/property/property.html
+++ b/client/app/property/property.html
@@ -1,4 +1,4 @@
-<header ng-include="'components/partials/navbar.html'" class="topnavbar-wrapper"
+<header ng-include="'components/partials/navbar.html'" class="navbar-wrapper"
         ng-controller="NavbarController"></header>
 
 <div class="container">
